# ETHDWallet

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.rs  memory.x
ethdwallet/: Cargo.toml
ethdwallet-cli/: Cargo.toml
ethdwallet-cli/src/: error.rs  main.rs  tx.rs
ethdwallet/.cargo/: config.toml
ethdwallet/src/: global.rs  init.rs  input.rs  interrupts.rs  main.rs  main_loop.rs  wallet.rs
ethdwallet/src/wallet/: safe_zone.rs
src/: error.rs  flash.rs  global.rs  i2c.rs  init.rs  input.rs  interrupts.rs  main.rs  main_loop.rs  task.rs  wallet.rs
src/task/: executor.rs
src/wallet/: initializer.rs  safe_zone.rs  utils.rs
