[package]
name = "coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"     # Access to the generic ARM peripherals
cortex-m-rt = "^0.7.1"  # Startup code for the ARM Core
embedded-hal = "0.2.7"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      #

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f407", "rt"]

[build-dependencies]
dotenv = "0.15.0"
