[package]
name = "coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"     # Access to the generic ARM peripherals
cortex-m-rt = "^0.7.1"  # Startup code for the ARM Core
embedded-hal = "0.2.7"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler
alloc-cortex-m = "0.4.2"
k256 = { version = "0.11.0", features = ["arithmetic", "ecdsa", "keccak256"], default-features = false }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
array-init = "2.0.0"
totp_embed = "1.0.5"
sha3 = { version = "0.10.1", default-features = false }
chacha20 = { version = "0.9.0", default-features = false }
cortex-m-semihosting = "0.5.0"

[profile.release]
opt-level = 's' # turn on maximum optimizations. 
lto = true      #

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f407", "rt"]

[build-dependencies]
dotenv = "0.15.0"

[dependencies.stm32f4xx-hal]
version = "0.13.1"
features = ["stm32f407"] # replace the model of your microcontroller here
