[package]
name = "ethdwallet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
clap = { version = "3.1.18", features = ["derive"] }
hex = "0.4.3"
num_enum = "0.5.7"
web3 = "0.18.0"
tokio = { version = "1", features = ["full"] }
serlp = { git = "https://github.com/M4tsuri/serlp.git" }
serde = { version = "1.0", features = ['derive'] }
serde_bytes = "0.11"
num = "0.4.0"
